Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113442

qmlformat creates temp file with trailing "~" which is not removed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.9, 6.2
    • 6.4.3
    • QML: Tooling
    • None
    • macOS Ventura 13.3.1(a) on a Apple M1 Max
      using the iTerm terminal with zsh shell
      Qt installed via [homebrew](https://brew.sh) with `homebrew install qt`

      qmlformat --version
      qmlformat 6.4.3
    • macOS
    • 1655c53d4 (tqtc/lts-6.2)

      This is a reopening of QTBUG-107685 - qmlformat creates temp file with trailing "~" which is not removed.

      The same error can be recreated with the command line command `qmlformat -i main.qml`, which leaves a `main.qml~` file behind, after formatting the original base file.

        For Gerrit Dashboard: QTBUG-113442
        # Subject Branch Project Status CR V

            qtqmlteam Qt Qml Team User
            dirkolbrich Dirk O
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes