qmlformat: do not generate backup files

qmlformat used to backup the original input file up to 2 copies when used
with --inplace mode. Change this hardcoded number into 0 and generate no
backup file.

Fixes: QTBUG-113442
Change-Id: Ifca86968fa65be0fd678012fc2e41b9ed8601d21
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit bc6c900b1556517e9fe20d73e40dc33d8c99a1cc)